--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/tailwind-config",
+  "name": "@timmac/tailwind-config",
   "version": "0.1.0",
   "private": true,
   "main": "index.ts",
@@ -20,9 +20,9 @@
     "tailwindcss": "3.3.5"
   },
   "devDependencies": {
-    "@acme/eslint-config": "^0.2.0",
-    "@acme/prettier-config": "^0.1.0",
-    "@acme/tsconfig": "^0.1.0",
+    "@timmac/eslint-config": "^0.2.0",
+    "@timmac/prettier-config": "^0.1.0",
+    "@timmac/tsconfig": "^0.1.0",
     "eslint": "^8.52.0",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
@@ -30,8 +30,8 @@
   "eslintConfig": {
     "root": true,
     "extends": [
-      "@acme/eslint-config/base"
+      "@timmac/eslint-config/base"
     ]
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@timmac/prettier-config"
 }
