--- a/tooling/tailwind/package.json
+++ b/tooling/tailwind/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "@timmac/ui",
+  "name": "@timmac/tailwind-config",
   "version": "0.1.0",
   "private": true,
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "main": "index.ts",
   "license": "MIT",
+  "files": [
+    "index.ts",
+    "postcss.js"
+  ],
   "scripts": {
     "clean": "rm -rf .turbo node_modules",
     "lint": "eslint .",
@@ -12,10 +15,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "autoprefixer": "^10.4.16",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.5"
   },
   "devDependencies": {
     "@timmac/eslint-config": "^0.2.0",
