--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ AUTH_SECRET='supersecret'
 # @see https://next-auth.js.org/providers/discord
 AUTH_DISCORD_ID=''
 AUTH_DISCORD_SECRET=''
+
+
+# CMS
+DATABASE_URI=mongodb://127.0.0.1/payload-template-blank
+PAYLOAD_SECRET=YOUR_SECRET_HERE
+HOST_NAME=localhost
