--- a/turbo.json
+++ b/turbo.json
@@ -37,6 +37,9 @@
     "DISCORD_CLIENT_ID",
     "DISCORD_CLIENT_SECRET",
     "NEXTAUTH_SECRET",
-    "NEXTAUTH_URL"
+    "NEXTAUTH_URL",
+    "DATABASE_URI",
+    "PAYLOAD_SECRET",
+    "HOST_NAME"
   ]
 }
