--- a/apps/landing-page/package.json
+++ b/apps/landing-page/package.json
@@ -10,7 +10,8 @@
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
-    "@timmac/payload-config": "^1.0.0",
+    "@timmac/cms": "^1.0.0",
+    "@timmac/ui": "^0.1.0",
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
