--- a/.env.example
+++ b/.env.example
@@ -16,11 +16,19 @@ AUTH_SECRET='supersecret'
 
 # Preconfigured Discord OAuth provider, works out-of-the-box
 # @see https://next-auth.js.org/providers/discord
-AUTH_DISCORD_ID=''
-AUTH_DISCORD_SECRET=''
+AUTH_DISCORD_ID='abc'
+AUTH_DISCORD_SECRET='abc'
 
 
 # CMS
-DATABASE_URI=mongodb://127.0.0.1/payload-template-blank
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+DATABASE_URI=mongodb://127.0.0.1/timmac-cms-v6
+PAYLOAD_SECRET=f5692035bbcf3d6f0e30cd7e
 HOST_NAME=localhost
+API_HOST=http:/localhost:3000
+NEXT_PUBLIC_API_HOST=http:/localhost:3000
+
+# Note for local testing use minio to emulate S3
+S3_ENDPOINT=http://127.0.0.1:9000
+S3_BUCKET=timmac
+S3_ACCESS_KEY_ID=NzjX1T0mrfxur8pe5OS9
+S3_SECRET_ACCESS_KEY=cxFEA0Mz71Ul87eDY8wg28lWnpsyFIJEi7F3qExd
