--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -20,13 +20,15 @@
     "@payloadcms/bundler-webpack": "^1.0.5",
     "@payloadcms/db-mongodb": "^1.0.6",
     "@payloadcms/plugin-cloud": "^2.2.6",
+    "@payloadcms/plugin-cloud-storage": "^1.1.1",
     "@payloadcms/richtext-lexical": "^0.1.16",
     "@payloadcms/richtext-slate": "^1.1.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
     "payload": "^2.0.15",
-    "react-colorful": "^5.6.1"
+    "react-colorful": "^5.6.1",
+    "s3": "link:@payloadcms/plugin-cloud-storage/s3"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
