added some blocks

--- a/turbo.json
+++ b/turbo.json
@@ -42,6 +42,8 @@
     "PAYLOAD_SECRET",
     "HOST_NAME",
     "API_HOST",
-    "NEXT_PUBLIC_API_HOST"
+    "NEXT_PUBLIC_API_HOST",
+    "NEXT_PUBLIC_S3_ENDPOINT",
+    "NEXT_PUBLIC_S3_BUCKET"
   ]
 }
