--- a/turbo.json
+++ b/turbo.json
@@ -44,6 +44,7 @@
     "API_HOST",
     "NEXT_PUBLIC_API_HOST",
     "NEXT_PUBLIC_S3_ENDPOINT",
-    "NEXT_PUBLIC_S3_BUCKET"
+    "NEXT_PUBLIC_S3_BUCKET",
+    "PAYLOD_CONFIG_PATH"
   ]
 }
